# deepomatic-workflows-remote

./: .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  requirements.txt
src/deepomatic/workflows/remote/: __init__.py
