[build-system]
requires = ["setuptools>=68.0.0", "setuptools_scm[toml]>=7.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepomatic-workflows-remote"
authors = [
    {name="deepomatic", email = "support@deepomatic.com"}
]
license = {text = "UNLICENSED"}
description = "Workflows server remote client"
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8"
]
dynamic = ["dependencies", "version", "optional-dependencies"]

[project.urls]
Product = "https://www.deepomatic.com"

[project.scripts]
wf_client = "deepomatic.workflows.remote:cli"

[tool.setuptools.dynamic]
dependencies = {file = ["./requirements.txt"]}

[tool.setuptools_scm]
write_to = "src/deepomatic/workflows/remote/__version__.py"
git_describe_command = "git describe --dirty --tags --long --match v* --first-parent"
fallback_version = "1"

[tool.setuptools.packages.find]
where=["src"]

[tool.black]
line-length = 140
target-version = ['py38']
include = ["src/deepomatic/workflows/remote", "tests"]
language_version = "python3"

[tool.isort]
profile = "black"
line_length = 140
multi_line_output = 3
py_version = 38
src_paths = ["src/deepomatic/workflows/remote"]
force_sort_within_sections=true
lines_after_imports=2
known_third_party=["pytest"]
known_local_folder=["src/deepomatic"]

[tool.distutils.bdist_wheel]
universal = true
